# SPDX-FileCopyrightText: 2023 Christina Sørensen
# SPDX-FileContributor: Christina Sørensen
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "fortune-kind"
description = "Fortune, but kind-a better"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
edition = "2021"
# Files to be excluded on `cargo publish`
exclude = [ "/oldtunes" ]
rust-version = "1.70.0"
readme = "README.md"
license = "GPL-3.0-only"
version = "0.1.12"
build = "build.rs"

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
grep = "0.3.1"
grep-matcher = "0.1.7"
grep-regex = "0.1.12"
grep-searcher = "0.1.13"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.13"
tempfile = "3.8.1"

[build-dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2.14"
